Project tellpal_v2_target {
  database_type: 'PostgreSQL'
  Note: 'Target schema based on docs/14_DB_Tasarimi_V2.md (core + analytics/roadmap).'
}

Enum v2_media_kind {
  IMAGE
  AUDIO
}

Enum v2_content_type {
  STORY
  MEDITATION
  LULLABY
  AUDIO_STORY
}

Enum v2_localization_status {
  DRAFT
  PUBLISHED
  ARCHIVED
}

Enum v2_category_type {
  CONTENT
  PARENT_GUIDANCE
}

Enum v2_content_event_type {
  START
  EXIT
  COMPLETE
}

Enum v2_app_event_type {
  APP_OPENED
  ONBOARDING_STARTED
  ONBOARDING_COMPLETED
  ONBOARDING_SKIPPED
  PAYWALL_SHOWN
  LOCKED_CONTENT_CLICKED
}

Enum v2_purchase_source {
  REVENUECAT_WEBHOOK
  CLIENT
}

Enum v2_subscription_product_type {
  SUBSCRIPTION
  NON_RENEWING
}

Enum v2_billing_period_unit {
  DAY
  WEEK
  MONTH
  YEAR
}

Enum v2_contributor_role {
  AUTHOR
  ILLUSTRATOR
  NARRATOR
  MUSICIAN
}

Table v2_languages {
  code varchar(10) [pk]
  display_name text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_media_assets {
  id bigint [pk, increment]
  provider varchar(32) [not null, default: 'FIREBASE_STORAGE']
  object_path text [not null]
  kind v2_media_kind [not null]
  mime_type text
  bytes bigint
  checksum_sha256 char(64)
  download_url text
  created_at timestamptz [not null, default: 'now()']

  Indexes {
    (provider, object_path) [unique]
  }
}

Table v2_app_users {
  id bigint [pk, increment]
  firebase_uid varchar(128) [not null, unique]
  is_allow_marketing boolean [not null, default: false]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
}

Table v2_user_profiles {
  id bigint [pk, increment]
  user_id bigint [not null]
  name text
  age_range varchar(32) [not null, default: 'UNKNOWN']
  avatar_media_id bigint
  favorite_genres text[] [not null, default: '{}']
  main_purposes text[] [not null, default: '{}']
  is_primary boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (user_id)
  }

  Note: 'Keep partial unique index: (user_id) UNIQUE WHERE is_primary = true'
}

Table v2_contents {
  id bigint [pk, increment]
  type v2_content_type [not null]
  external_key text [not null, unique, note: 'CMS/import/deep-link stable key']
  is_premium boolean [not null, default: false]
  is_active boolean [not null, default: true]
  age_range int [note: 'Optional: single age like 3/4/5 (doc: nullable)']
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
}

Table v2_contributors {
  id bigint [pk, increment]
  display_name text [not null]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (display_name)
  }

  Note: 'For fast name search consider pg_trgm + GIN index on display_name.'
}

Table v2_content_contributors {
  id bigint [pk, increment]
  content_id bigint [not null]
  contributor_id bigint [not null]
  role v2_contributor_role [not null]
  language_code varchar(10)
  credit_name text [note: 'Optional display override; defaults to contributor.display_name']
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (content_id, role, language_code, sort_order)
    (contributor_id)
  }

  Note: 'Recommended uniqueness: (content_id, role, contributor_id) where language_code is null; and (content_id, role, contributor_id, language_code) where language_code is not null. Also CHECK sort_order >= 0.'
}

Table v2_content_localizations {
  content_id bigint [pk, not null]
  language_code varchar(10) [pk, not null]
  title text [not null]
  description text
  body_text text [note: 'For single-page content like meditation']
  cover_media_id bigint
  audio_media_id bigint
  duration_minutes int
  status v2_localization_status [not null, default: 'DRAFT']
  published_at timestamptz
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (language_code, status, published_at)
  }
}

Table v2_content_story_details {
  content_id bigint [pk, not null]
  page_count int [not null]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Note: 'For STORY type only; enforce via application logic or trigger.'
}

Table v2_story_pages {
  content_id bigint [pk, not null]
  page_number int [pk, not null]
  illustration_media_id bigint [not null]

  Note: 'page_number should start at 1 (enforce with CHECK: page_number > 0)'
}

Table v2_story_page_localizations {
  content_id bigint [pk, not null]
  page_number int [pk, not null]
  language_code varchar(10) [pk, not null]
  text_content text
  audio_media_id bigint
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (content_id, language_code, page_number)
  }
}

Table v2_categories {
  id bigint [pk, increment]
  slug text [not null, unique]
  type v2_category_type [not null, default: 'CONTENT']
  is_premium boolean [not null, default: false]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
}

Table v2_category_localizations {
  category_id bigint [pk, not null]
  language_code varchar(10) [pk, not null]
  name text [not null]
  description text
  image_media_id bigint
  status v2_localization_status [not null, default: 'DRAFT']
  published_at timestamptz
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Indexes {
    (language_code, status, published_at)
  }
}

Table v2_category_contents {
  category_id bigint [pk, not null]
  language_code varchar(10) [pk, not null]
  content_id bigint [pk, not null]
  display_order int [not null]
  created_at timestamptz [not null, default: 'now()']

  Indexes {
    (category_id, language_code, display_order) [unique]
    (language_code, category_id, display_order)
    (content_id)
  }

  Note: 'display_order >= 0 (enforce with CHECK)'
}

Table v2_content_events {
  event_id uuid [pk]
  profile_id bigint [not null]
  content_id bigint [not null]
  language_code varchar(10) [not null]
  event_type v2_content_event_type [not null]
  occurred_at timestamptz [not null]
  ingested_at timestamptz [not null, default: 'now()']
  session_id uuid
  left_page int
  engagement_seconds int
  metadata jsonb
  legacy_event_key text

  Indexes {
    (profile_id, legacy_event_key) [unique]
    (profile_id, occurred_at)
    (content_id, occurred_at)
    (event_type, occurred_at)
    (session_id)
  }

  Note: 'If using legacy_event_key idempotency: UNIQUE (profile_id, legacy_event_key) where legacy_event_key is not null; also CHECK left_page>=0 and engagement_seconds>=0.'
}

Table v2_app_events {
  event_id uuid [pk]
  profile_id bigint [not null]
  event_type v2_app_event_type [not null]
  content_id bigint
  occurred_at timestamptz [not null]
  ingested_at timestamptz [not null, default: 'now()']
  payload jsonb
  legacy_event_key text

  Indexes {
    (profile_id, legacy_event_key) [unique]
    (profile_id, occurred_at)
    (content_id, occurred_at)
    (event_type, occurred_at)
  }
}

Table v2_subscription_products {
  store varchar(32) [pk, not null]
  product_id text [pk, not null]
  product_type v2_subscription_product_type [not null]
  billing_period_unit v2_billing_period_unit [not null]
  billing_period_count int [not null]
  entitlement_ids jsonb [note: 'RevenueCat mapping (can be text[] as well)']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']

  Note: 'Price is not canonical here; actual prices come from purchase events.'
}

Table v2_purchase_event_types {
  code varchar(64) [pk]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_subscription_period_types {
  code varchar(32) [pk]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_purchase_stores {
  code varchar(32) [pk]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_purchase_environments {
  code varchar(16) [pk]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_purchase_reason_codes {
  code varchar(32) [pk]
  reason_type varchar(32) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_purchase_events {
  id bigint [pk, increment]
  user_id bigint [not null]
  occurred_at timestamptz [not null]
  ingested_at timestamptz [not null, default: 'now()']
  source v2_purchase_source [not null]
  event_type varchar(64) [not null]
  product_id text [not null]
  entitlement_id text
  store varchar(32)
  price_micros bigint
  currency varchar(3)
  is_trial boolean
  revenuecat_event_id text
  raw_payload jsonb
  created_at timestamptz [not null, default: 'now()']

  event_timestamp_at timestamptz [note: 'RevenueCat event_timestamp_ms (webhook created time)']
  expiration_at timestamptz
  grace_period_expiration_at timestamptz
  auto_resume_at timestamptz
  period_type varchar(32)
  is_trial_conversion boolean
  cancel_reason varchar(32)
  expiration_reason varchar(32)
  price numeric
  price_in_purchased_currency numeric
  tax_percentage numeric
  commission_percentage numeric
  transaction_id text
  original_transaction_id text
  renewal_number int
  offer_code text
  country_code varchar(2)
  environment varchar(16)
  presented_offering_id text
  new_product_id text
  net_revenue_micros bigint

  Indexes {
    (revenuecat_event_id) [unique]
    (user_id, occurred_at)
    (store, product_id)
  }

  Note: 'Keep revenuecat_event_id UNIQUE for webhook idempotency (allows multiple NULLs in Postgres). Add CHECKs for non-negative numeric fields as needed.'
}

Table v2_purchase_context_snapshots {
  id bigint [pk, increment]
  purchase_event_id bigint [not null, unique]
  user_id bigint [not null]
  profile_id bigint
  attribution_window_seconds int [not null, default: 86400]
  attributed_app_event_id uuid
  attributed_content_id bigint
  profile_snapshot jsonb [not null]
  created_at timestamptz [not null, default: 'now()']

  Indexes {
    (user_id, created_at)
  }
}

Table v2_admin_users {
  id bigint [pk, increment]
  username varchar(128) [not null, unique]
  password_hash text [not null]
  enabled boolean [not null, default: true]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
  last_login_at timestamptz
}

Table v2_admin_roles {
  code varchar(64) [pk]
  description text
}

Table v2_admin_user_roles {
  admin_user_id bigint [pk, not null]
  role_code varchar(64) [pk, not null]
  created_at timestamptz [not null, default: 'now()']
}

Table v2_admin_refresh_tokens {
  id bigint [pk, increment]
  admin_user_id bigint [not null]
  token_hash char(64) [not null, unique]
  issued_at timestamptz [not null, default: 'now()']
  expires_at timestamptz [not null]
  revoked_at timestamptz
  replaced_by_token_hash char(64)
  user_agent text
  ip inet
  created_at timestamptz [not null, default: 'now()']

  Indexes {
    (admin_user_id, expires_at)
  }

  Note: 'CHECK expires_at > issued_at'
}

Ref: v2_user_profiles.user_id > v2_app_users.id [delete: cascade]
Ref: v2_user_profiles.avatar_media_id > v2_media_assets.id

Ref: v2_content_localizations.content_id > v2_contents.id [delete: cascade]
Ref: v2_content_localizations.language_code > v2_languages.code
Ref: v2_content_localizations.cover_media_id > v2_media_assets.id
Ref: v2_content_localizations.audio_media_id > v2_media_assets.id

Ref: v2_content_story_details.content_id > v2_contents.id [delete: cascade]

Ref: v2_content_contributors.contributor_id > v2_contributors.id
Ref: v2_content_contributors.content_id > v2_contents.id [delete: cascade]
Ref: v2_content_contributors.language_code > v2_languages.code

Ref: v2_story_pages.content_id > v2_contents.id [delete: cascade]
Ref: v2_story_pages.illustration_media_id > v2_media_assets.id

Ref: v2_story_page_localizations.(content_id, page_number) > v2_story_pages.(content_id, page_number) [delete: cascade]
Ref: v2_story_page_localizations.(content_id, language_code) > v2_content_localizations.(content_id, language_code) [delete: cascade]
Ref: v2_story_page_localizations.audio_media_id > v2_media_assets.id

Ref: v2_category_localizations.category_id > v2_categories.id [delete: cascade]
Ref: v2_category_localizations.language_code > v2_languages.code
Ref: v2_category_localizations.image_media_id > v2_media_assets.id

Ref: v2_category_contents.(category_id, language_code) > v2_category_localizations.(category_id, language_code) [delete: cascade]
Ref: v2_category_contents.(content_id, language_code) > v2_content_localizations.(content_id, language_code) [delete: cascade]

Ref: v2_content_events.profile_id > v2_user_profiles.id [delete: cascade]
Ref: v2_content_events.content_id > v2_contents.id
Ref: v2_content_events.language_code > v2_languages.code

Ref: v2_app_events.profile_id > v2_user_profiles.id [delete: cascade]
Ref: v2_app_events.content_id > v2_contents.id

Ref: v2_purchase_events.user_id > v2_app_users.id [delete: cascade]
Ref: v2_purchase_events.(store, product_id) > v2_subscription_products.(store, product_id)
Ref: v2_purchase_events.event_type > v2_purchase_event_types.code
Ref: v2_purchase_events.period_type > v2_subscription_period_types.code
Ref: v2_purchase_events.store > v2_purchase_stores.code
Ref: v2_purchase_events.environment > v2_purchase_environments.code
Ref: v2_purchase_events.cancel_reason > v2_purchase_reason_codes.code
Ref: v2_purchase_events.expiration_reason > v2_purchase_reason_codes.code

Ref: v2_subscription_products.store > v2_purchase_stores.code

Ref: v2_purchase_context_snapshots.purchase_event_id > v2_purchase_events.id [delete: cascade]
Ref: v2_purchase_context_snapshots.user_id > v2_app_users.id [delete: cascade]
Ref: v2_purchase_context_snapshots.profile_id > v2_user_profiles.id [delete: set null]
Ref: v2_purchase_context_snapshots.attributed_app_event_id > v2_app_events.event_id [delete: set null]
Ref: v2_purchase_context_snapshots.attributed_content_id > v2_contents.id [delete: set null]

Ref: v2_admin_user_roles.admin_user_id > v2_admin_users.id [delete: cascade]
Ref: v2_admin_user_roles.role_code > v2_admin_roles.code

Ref: v2_admin_refresh_tokens.admin_user_id > v2_admin_users.id [delete: cascade]
